--- a/.github/workflows/lint-js.yml
+++ b/.github/workflows/lint-js.yml
@@ -1,6 +1,6 @@
-# Installs Node.js dependencies and pnpm, and checks formatting + linting
+# Installs dependencies with Bun, and checks formatting + linting
 
-name: Lint Node.js
+name: Lint with Bun
 
 on:
   push:
@@ -28,19 +28,13 @@ jobs:
       - name: Checkout repository code
         uses: actions/checkout@v4
 
-      - name: Set up pnpm package manager
-        uses: pnpm/action-setup@v4
+      - name: Set up Bun
+        uses: oven-sh/setup-bun@v2
         with:
-          version: latest
-
-      - name: Set up Node.js v22
-        uses: actions/setup-node@v4
-        with:
-          node-version-file: .node-version
-          cache: "pnpm"
+          bun-version: latest
 
       - name: Install dependencies from lockfile
-        run: pnpm install --frozen-lockfile
+        run: bun install --frozen-lockfile
 
       - name: Run lint step
-        run: pnpm lint
+        run: bun run lint
